# dria-python-client

./: LICENSE  README.md  pyproject.toml
dria/: __init__.py  constants.py
dria/config/: __init__.py  config.py
dria/core/: __init__.py  client.py  index.py  index_local.py
dria/core/api/: __init__.py  api.py  api_local.py
dria/core/client/: __init__.py  client.py  client_local.py
dria/core/grpc/: vector_pb2.py
dria/core/proto/: serialization.py  vector_pb2.py
dria/exceptions/: __init__.py  exceptions.py
dria/models/: __init__.py  models.py  models_local.py
dria_test/: test_api.py  test_proto.py
dria_test/utils/: utils.py
scripts/: index_runner.py
