[tool.poetry]
name = "dria"
version = "0.1.0"
description = "A Python client for the Dria API."
authors = ["Anil Berk Altuner <anil@firstbatch.xyz>", "Omer Kaya <omer@firstbatch.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
